<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_dashboard"
    app:startDestination="@id/main">

    <fragment
        android:id="@+id/main"
        android:name="com.pampang.nav.screens.buyer.BuyerMainFragment"
        android:label="@string/fragment_main"
        tools:layout="@layout/fragment_main"/>
    <fragment
        android:id="@+id/stores"
        android:name="com.pampang.nav.screens.seller.SellerListFragment"
        android:label="@string/store_list_title"
        tools:layout="@layout/fragment_list">
        <argument
            android:name="user_type"
            android:defaultValue="buyer"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/messages"
        android:name="com.pampang.nav.screens.GroupChatFragment"
        android:label="@string/fragment_group_chat"
        tools:layout="@layout/fragment_group_chat" />
    <fragment
        android:id="@+id/profile"
        android:name="com.pampang.nav.screens.buyer.BuyerProfileFragment"
        android:label="@string/fragment_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>